# FastAPI-The-Complete-Course

./: .gitignore  pyproject.toml
Exercises/Project 1/: books.py
Exercises/Project 2/: books2.py
